--- a/Contact.html
+++ b/Contact.html
@@ -22,9 +22,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
         <div class="container-fluid">
 
-            <div class="">
+            <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="60px" alt="">
+                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -157,7 +157,7 @@
                     <div>
                         <h6 class="fw-bold ">Address :</h6>
                         <p>#Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
-                            Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
+                            Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
                     </div>
                 </div>
 
