--- a/Electrical.html
+++ b/Electrical.html
@@ -22,9 +22,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
         <div class="container-fluid">
 
-            <div class="">
+            <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="60px" alt="">
+                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -64,7 +64,7 @@
 
 
     <div id="Panel_de">
-        <section id="itimghideandview" class=" ">
+        <section id="itimghideandview" class="marandpadingpanel">
             <div class="container">
                 <h2 class=" fw-bold ">Panel design</h2>
                 <p class="">We specialize in electrical control Panel Design, SLDA, GA and wiring diagram services. Our
@@ -106,7 +106,7 @@
                                 <p class="panelfontdiv">Unleash precision effortlessly with our tailored General
                                     Arrangement (GA) Diagrams for
                                     switchboards and control panels. From clear dimensions to feeder locations, door
-                                    equipment details and more. we customize based on your needs, site space and bus
+                                    equipment details and more. We customize based on your needs, site space and bus
                                     duct
                                     locations. Whether it's LV or MV switchboards like PCC, MCC, PMCC or specialized
                                     panels. we've got all Aspects covered. Simplify your project—share your BOQ, feeder list
@@ -160,7 +160,7 @@
                         ensures accurate and thorough information, simplifying the component ordering process for your
                         purchase department. Additionally, our tailored panel specifications guarantee optimal
                         performance
-                        and scalability for your specific requirements. For a detailed BOM and panel specifications, we
+                        and scalability for your specific requirements. For a detailed BOM and panel specifications, We
                         require the final General Arrangement (GA) scheme and a list specifying the make of
                         components.
                         Trust us for meticulous BOM creation and panel specification that streamline your procurement
@@ -169,7 +169,7 @@
 
                 </div>
                 <div class="col-lg-5  col-md-6">
-                    <img class="img-fluid webimgit" src="./Diagram/BOM (1).png" alt="">
+                    <img class="img-fluid webimgit" src="./Diagram/BOM_ELECTRICAL.png" alt="">
                 </div>
                 <div class="col-lg-1 "></div>
             </div>
@@ -190,7 +190,7 @@
                     <div class="d-flex justify-content-center secitsolutionimgdiv ">
                         <img class="img-fluid " src="./Diagram/EARTHING.jpeg" alt="">
                     </div>
-                    <p>Delivering comprehensive solutions, we specialize in providing precise earthing and lightning
+                    <p>Delivering comprehensive solutions, We specialize in providing precise earthing and lightning
                         layouts. Our expertise ensures a meticulous approach to integrate these vital elements
                         seamlessly
                         into your overall project design, meeting safety standards, and enhancing both functionality and
@@ -223,7 +223,7 @@
                         identification and classification to detailed specifications, ensuring optimal efficiency and
                         adherence to industry standards. With expertise in assessing cable quantities, planning
                         efficient
-                        routing, and defining connection points and termination details, we provide a seamless and
+                        routing and defining connection points and termination details, We provide a seamless and
                         precision-driven approach. Our cable scheduling services extend beyond isolated design,
                         integrating
                         seamlessly with other engineering systems for a holistic and well-coordinated solution.
@@ -251,8 +251,8 @@
             <div class="container  ">
                 <h2 class=" fw-bold mt-3 ">Design & Manufacturing of Control Panels</h2>
                 <p class="">Experience next-level efficiency with our personalized panel design and manufacturing
-                    solutions. From PCC and MCC to VFD and PLC panels, we craft tailored options to match your exact
-                    needs. Our state-of-the-art designs prioritize performance, dependability, and energy optimization,
+                    solutions. From PCC and MCC to VFD and PLC panels, We craft tailored options to match your exact
+                    needs. Our state-of-the-art designs prioritize performance, dependability and energy optimization,
                     seamlessly integrating into your operations. Trust our expertise to elevate your systems and propel
                     your success forward.</p>
                 <button type="button" class="btn btn-secondary mb-3">Get A Quote</button>
@@ -325,7 +325,7 @@
                                         Precision motor speed control for energy savings.
                                     </li>
                                     <li>
-                                        we guarantee increased efficiency and prolonged equipment longevity, delivering
+                                        We guarantee increased efficiency and prolonged equipment longevity, delivering
                                         superior performance across diverse industrial applications.
                                     </li>
                                 </ul>
@@ -379,7 +379,7 @@
             <!-- <div class="col-md-1"></div> -->
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
-                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application.  we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
+                <p>At Ennova Technology, We specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application. We offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
             </div>
             <!-- <div class="col-md-1"></div> -->
             <div class="  col-lg-1"></div>
