--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
         <div class="container-fluid">
 
-            <div class="">
+            <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="60px" alt="">
+                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -57,11 +57,7 @@
             </div>
         </div>
     </nav>
-
-
-
-
-
+ 
     <section id="About" class="container-fluid">
 
         <div class="row">
@@ -74,7 +70,7 @@
             <div class="col-lg-5 col-md-6 font aboutpara" data-aos="fade-up" data-aos-duration="2500">
                 <h1>- Get to Know About us -</h1>
                 <h5>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing
-                    electronics to developing websites, software and application. we offer a wide range of services to help
+                    electronics to developing websites, software and application. We offer a wide range of services to help
                     businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making
                     processes more efficient and effective. Our goal is to use technology to solve problems and drive
                     growth for our clients.</h5>
