--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
         <div class="container-fluid">
 
-            <div class="">
+            <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
                     <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
@@ -35,7 +35,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse flex-grow-1 " id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center fw-bold ">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="./index.html">Home</a>
@@ -143,7 +143,7 @@
             <div class="col-lg-5 col-md-6 font aboutpara" data-aos="fade-up" data-aos-duration="2500">
                 <h1>- Get to Know About us -</h1>
                 <h5 class="mt-3">At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing
-                    electronics to developing websites, software and applications. we offer a wide range of services to help
+                    electronics to developing websites, software and applications. We offer a wide range of services to help
                     businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making
                     processes more efficient and effective. Our goal is to use technology to solve problems and drive
                     growth for our clients.</h5>
