--- a/relay.html
+++ b/relay.html
@@ -23,9 +23,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
         <div class="container-fluid">
 
-            <div class="">
+            <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="60px" alt="">
+                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -248,7 +248,7 @@
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td>12VDC 2 C0 4CH RELAY CARD</td>
+                    <td>12VDC 2 Co 4CH RELAY CARD</td>
                     <td>ET-RLC-12V-4CH-2CO</td>
                     <td>12V</td>
                     <td>4</td>
@@ -272,7 +272,7 @@
                 </tr>
                 <tr>
                     <td>9</td>
-                    <td>24VDC 1C0 2CH RELAY CARD</td>
+                    <td>24VDC 1 CO 2CH RELAY CARD</td>
                     <td>ET-RLC-24V-2CH-1CO</td>
                     <td>24V</td>
                     <td>2</td>
@@ -347,7 +347,7 @@
                 </tr>
                 <tr>
                     <td>18</td>
-                    <td>230VAC 100 4CH RELAY CARD</td>
+                    <td>230VAC 1CO 4CH RELAY CARD</td>
                     <td>ET-RLC-230V-4CH-1CO</td>
                     <td>230V</td>
                     <td>4</td>
@@ -363,7 +363,7 @@
                 </tr>
                 <tr>
                     <td>20</td>
-                    <td>230VAC 100 8CH RELAY CARD</td>
+                    <td>230VAC 1CO 8CH RELAY CARD</td>
                     <td>ET-RLC-230V-8CH-1CO</td>
                     <td>230V</td>
                     <td>8</td>
