--- a/firstcv.html
+++ b/firstcv.html
@@ -24,9 +24,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
         <div class="container-fluid">
 
-            <div class="">
+            <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="60px" alt="">
+                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -81,7 +81,7 @@
                                     aria-label="Slide 3"></button>
                                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
                                     aria-label="Slide 4"></button>
-                                 
+
 
 
                             </div>
@@ -95,7 +95,7 @@
                                 <div class="carousel-item">
                                     <img src="./IORELAY/5.png" class="d-block w-100" alt="...">
                                 </div>
-                                  <div class="carousel-item">
+                                <div class="carousel-item">
                                     <img src="./IORELAY/7.png" class="d-block w-100" alt="...">
                                 </div>
 
@@ -155,7 +155,7 @@
             <h3 class="fw-bold text-primary">SPECIFICATION</h3>
             <ul>
                 <li><span>Relay Type:</span> Omron G2RL-1</li>
-                <li><span>Contact Configuration:</span> NO/NC selectable for eachchannel</li>
+                <li><span>Contact Configuration:</span> NO/NC selectable for each channel</li>
                 <li><span>Isolation:</span> Optically isolated control inputs</li>
                 <li><span>Color:</span> Green</li>
                 <li><span>LED Indicators:</span> Yes (LED for each channel)</li>
@@ -163,7 +163,6 @@
                 <li><span>Storage temperature:</span> (-10°C to 60°C)</li>
                 <li><span>Humidity Range:</span> 10% to 90% RH (non-condensing)</li>
                 <li><span>Protection:</span> Freewheeling diode across relay coil</li>
-
             </ul>
         </div>
         <div class="container ">
@@ -317,7 +316,8 @@
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
                 <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing
-                    electronics to developing websites, software and application. we offer a wide range of services to help
+                    electronics to developing websites, software and application. We offer a wide range of services to
+                    help
                     businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making
                     processes more efficient and effective. Our goal is to use technology to solve problems and drive
                     growth for our clients.</p>
